# docusketch-fastapi

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose-local.yaml  pyproject.toml
source/: import.py  main.py  middlewares.py  utils.py
source/api/items/: handlers.py  schemas.py
source/config/: .env.template  settings.py
source/data/: init.xlsx
source/db/: crud.py  database.py  models.py
source/logs/: log.py
source/migrations/: env.py
source/migrations/versions/: a93e572543a9_initial.py  b1a5b8c3c1ea_initial.py
source/tests/: test_main.py
source/tests/items/: dependencies.py  handlers.py  test_items.py
